Increased spacing between mode icons
Fixed: moon trajectory has a kink or curly-q because cartoon offset is too large
# 0.0.06 (47106) Dec 13, 2010
Fixed: sim doesn't pause on reset
Made path lengths depend on the mode, and only go for 1.5 periods of the default orbit
Removed moon slider because it takes up too much space
Improved mode radio buttons: icons change size with relative body size
Improved mode radio buttons: icons are aligned horizontally
Converted mode radio button text to icons
Fixed: Earth System button should set the mass, velocity, and positions for the bodies to the earth system values within the same mode.
Fixed: Drag handlers broken for dragging in cartoon scale
Fixed: Moon position doesn't update when switching to real scale
Fixed: PathNode should be able to toggle between cartoon/real without disappearing
Fixed: label pointer for moon should point the other way in real scale
Fixed: velocity vector arrows do not update properly
Fixed: velocity vector arrows do not respect scale
Fixed icon sizes in the control panel
Fixed: Path node is incorrect in cartoon scale
Improved cartoon mode
Fixed: initial zoom is incorrect
Removed animation and zooming
Added UI for Earth System button
Switched to 4 modes: SP, SPM, PM, Ps
Fixed: Location of "x planet mass" seems inconsistent, sometimes above and sometimes below.
Fixed: Hard to see where "20 planet masses" text overlaps sun body.
# 0.0.05 (46883) Dec 6, 2010
Fixed: "Planet mass" PText is intercepting mouse events.
Fixed: My Planet & Space Station slider icon needs to be bigger
Added a new mode for My Sun, Planet & Earth
Fixed lunar orbit in Sun, Earth & Moon mode
Created space station modes
# 0.0.04 (46625) Nov 29, 2010
Fixed: Sim should start paused, so that the user has to hit play for motion to start
Fixed: Path should only start after user presses "path", not from beginning of simulation